<resources>
    <string name="app_name">Vidyo.io Connector</string>
    <string name="host">Host</string>
    <string name="host_hint">example.vidyo.io</string>
    <string name="token">Token</string>
    <string name="token_hint">required</string>
    <string name="display_name">Display Name</string>
    <string name="your_name">your name</string>
    <string name="resource_id">Resource ID</string>
    <string name="resource_id_hint">required</string>
</resources>
