<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vidyo.app.vidyoclient.MainActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="view"
            type="com.vidyo.vidyoconnector.model.VidyoViewController" />

        <variable
            name="connector"
            type="com.vidyo.vidyoconnector.model.VidyoConnectorController" />

        <variable
            name="connection"
            type="com.vidyo.vidyoconnector.model.ConnectionData" />

        <variable
            name="showInput"
            type="boolean" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:background="#aaa">

        <FrameLayout
            android:id="@+id/videoFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/controlsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:alpha="0.9"
            android:background="@drawable/rounded_border_edittext"
            android:divider="@drawable/divider"
            android:minWidth="300dp"
            android:orientation="vertical"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="5dp"
            android:showDividers="middle"
            app:layout_constraintBottom_toTopOf="@+id/toolbarLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showBlock="@{safeUnbox(view.isShowInput)}">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/vidyo_logo"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:maxWidth="240dp"
                android:paddingBottom="0dp"
                android:scaleType="centerInside"
                android:src="@drawable/vidyo_io_vertical_dark" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginEnd="5dp"
                    android:width="110dp"
                    android:gravity="end"
                    android:maxLines="1"
                    android:text="@string/host"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/hostTextBox"
                    style="@style/AppTheme.Widget.EditText.Connection"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@android:color/transparent"
                    android:enabled="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/host_hint"
                    android:inputType="text"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="0dp"
                    android:text="@={connection.host}"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginEnd="5dp"
                    android:width="110dp"
                    android:gravity="end"
                    android:maxLines="1"
                    android:text="@string/token"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/tokenTextBox"
                    style="@style/AppTheme.Widget.EditText.Connection"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@android:color/transparent"
                    android:enabled="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/token_hint"
                    android:inputType="text"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="0dp"
                    android:text="@={connection.token}"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginEnd="5dp"
                    android:width="110dp"
                    android:gravity="end"
                    android:maxLines="1"
                    android:text="@string/display_name"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/displayNameTextBox"
                    style="@style/AppTheme.Widget.EditText.Connection"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@android:color/transparent"
                    android:enabled="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/your_name"
                    android:inputType="text"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="0dp"
                    android:text="@={connection.displayName}"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginEnd="5dp"
                    android:width="110dp"
                    android:gravity="end"
                    android:maxLines="1"
                    android:text="@string/resource_id"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/resourceIdTextBox"
                    style="@style/AppTheme.Widget.EditText.Connection"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@android:color/transparent"
                    android:enabled="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/resource_id_hint"
                    android:inputType="text"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="0dp"
                    android:text="@={connection.resourceId}"
                    android:textSize="12sp" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:layout_gravity="center"
                    android:id="@+id/connectionSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:visibility="invisible"
                    app:show="@{safeUnbox(view.isConnecting)}" />

                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/clientVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:maxLines="1"
                    android:paddingEnd="2dp"
                    android:paddingStart="2dp"
                    android:text="@{connector.version}"
                    android:textColor="#ff0000"
                    android:textSize="12sp"
                    app:show="@{safeUnbox(view.isShowVersion)}"
                    tools:text="VidyoClient-AndroidSDK 0.0.0.0"
                    tools:visibility="visible" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/toolbarStatusText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:show="@{safeUnbox(view.isShowToolbar)}">

            <ToggleButton
                android:id="@+id/connect_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:alpha="0.9"
                android:background="@drawable/toggle_connect"
                android:checked="@{safeUnbox(view.connectButtonState)}"
                android:enabled="@{safeUnbox(view.allowReconnect)}"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textOff=""
                android:textOn="" />

            <ToggleButton
                android:id="@+id/camera_switch"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="0dp"
                android:alpha="0.9"
                android:background="@drawable/camera_switch"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textOff=""
                android:textOn="" />

            <ToggleButton
                android:id="@+id/camera_privacy"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="0dp"
                android:alpha="0.9"
                android:background="@drawable/toggle_camera_privacy"
                android:checked="@{safeUnbox(connector.mediaController.cameraPrivacy)}"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textOff=""
                android:textOn="" />

            <ToggleButton
                android:id="@+id/microphone_privacy"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="0dp"
                android:alpha="0.9"
                android:background="@drawable/toggle_mic_privacy"
                android:checked="@{safeUnbox(connector.mediaController.microphonePrivacy)}"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textOff=""
                android:textOn="" />
        </LinearLayout>

        <TextView
            android:id="@+id/toolbarStatusText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:background="#000"
            android:gravity="center_horizontal|bottom"
            android:maxLines="1"
            android:paddingEnd="2dp"
            android:paddingStart="2dp"
            android:shadowColor="#0d0d0d"
            android:shadowDx="-3.0"
            android:shadowDy="-3.0"
            android:shadowRadius="2.0"
            android:textColor="#f1f1f1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:gravity="center_horizontal|bottom"
            android:maxLines="1"
            android:paddingEnd="2dp"
            android:paddingStart="2dp"
            android:shadowColor="#0d0d0d"
            android:shadowDx="-3.0"
            android:shadowDy="-3.0"
            android:shadowRadius="2.0"
            android:textColor="#f1f1f1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:textRes="@{safeUnbox(view.connectionStatusResource)}" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:gravity="center_horizontal|bottom"
            android:maxLines="1"
            android:paddingEnd="2dp"
            android:paddingStart="2dp"
            android:shadowColor="#0d0d0d"
            android:shadowDx="-3.0"
            android:shadowDy="-3.0"
            android:shadowRadius="2.0"
            android:text="@{view.connectionStatus}"
            android:textColor="#f1f1f1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ToggleButton
            android:id="@+id/toggle_debug"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:alpha="0.7"
            android:background="@drawable/gear"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textOff=""
            android:textOn=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/videoFrame" />

    </android.support.constraint.ConstraintLayout>
</layout>


